--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -6,21 +6,23 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-        <script src="https://raw.githubusercontent.com/davist11/jQuery-One-Page-Nav/master/jquery.nav.js"></script>
     </head>
-    <body>
+    <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
-            <a class="navbar-brand" href="./index.html">Sherman's March to the Sea</a>
+            <a class="navbar-brand" href="#civilWarPics">Sherman's March to the Sea</a>
             <ul id="nav-items" class="navbar-nav">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#civilWarPics">Photos</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#total-warfare">Total Warfare</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#works-cited">Works Cited</a>
                 </li>
             </ul>
         </nav>
-        <div id="civilWarPics" class="carousel slide" data-ride="carousel">
+        <div id="civilWarPics" class="carousel slide" data-ride="carousel" style="padding-top: 56px;">
         <ul class="carousel-indicators">
             <li data-target="#civilWarPics" data-slide-to="0" class="active"></li>
             <li data-target="#civilWarPics" data-slide-to="1"></li>
@@ -33,7 +35,7 @@
                 </center>
                 <div class="carousel-caption">
                     <h3>Sherman's March to the Sea (1868)</h3>
-                    <p>Source: Library of Congress Prints and Photographs Divsion</p>
+                    <p>Source: Alexander Hay Ritchie</p>
                 </div>
             </div>
             <div class="carousel-item">
@@ -50,7 +52,7 @@
                     <img style="height: 525px;" src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Sherman_railroad_destroy_noborder.jpg" alt="Sherman Destroying Railroad">
                 </center>
                 <div class="carousel-caption">
-                    <h3>Sherman's Men Destroying Railroad</h3>
+                    <h3>Sherman's Men Destroying a Railroad</h3>
                     <p>Source: George N. Barnard</p>
                 </div>
             </div>
@@ -62,18 +64,41 @@
             <span class="carousel-control-next-icon"></span>
         </a>      
         </div>
-        <div id="works-cited" style="padding-top: 25px; " class="container">
-            <h1 class="display-4" style="text-align: center;">Works Cited</h1>
+        <div id="total-warfare" style="padding-top: 25px;" class="container">
+            <h1 class="display-4 text-center">Total Warfare</h1>
+            <p class="text-center">
+                Sherman's march was based around <b>Total Warfare</b> to bring fear to the people in Georgia. Sherman
+                gave his troops nothing to live off of except for tents to live in. Sherman's troops would steal food 
+                from people in the south for sustinance. The soldiers would burn down the barns of anyone who resisted
+                the raid as a sort of payback. Total warfare also had Sherman's troops burn down and destroy anything
+                of value to the confederates. This included factories, railroads, weapon storages, etc.
+            </p>
         </div>
+        <div id="works-cited" style="padding-top: 25px; " class="container">
+            <h1 class="display-2" style="text-align: center;">Works Cited</h1>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-6">
+                        <h3 class="text-center">Images</h3>
+                        <ul>
+                            <li>Alexander Hay Ritchie [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Sherman_sea_1868.jpg">via Wikimedia Commons</a></li>
+                            <li>Map by Hal Jespersen, www.cwmaps.com [<a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File:Savannah_Campaign.png">via Wikimedia Commons</a></li>
+                            <li>Geroge N. Bernard [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Sherman_railroad_destroy_noborder.jpg">via Wikimedia Commons</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-6">
+                        <h3 class="display-6 text-center">Information</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="page-footer font-small pt-4">
+            <div class="footer-copyright text-center text-light bg-primary py-3">
+                © Copyright 2019 Hayden Stith. All Rights Reserved. All Information and Media Used Have Rights and Those Rights are Held By Their Respective Owners and are <a href="#works-cited" style="color: white; text-decoration: underline;">Cited Here</a>
+            </div>
+        </footer>
         <script>
-            $('#nav-items').onePageNav({
-                currentClass: 'active',
-                changeHash: false,
-                scrollSpeed: 750,
-                scrollThreshold: 0.5,
-                filter: '',
-                easing: 'swing',
-            });
+            
         </script>
     </body>
 </html>
