--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -3,22 +3,30 @@
     <head>
         <title>Sherman's March to the Sea | Facts and Info</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body data-spy="scroll" data-target=".navbar" data-offset="50">
         <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
             <a class="navbar-brand" href="#civilWarPics">Sherman's March to the Sea</a>
-            <ul id="nav-items" class="navbar-nav">
+            <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#civilWarPics">Photos</a>
+                    <a class="nav-link scroll" href="#civilWarPics">Photos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#total-warfare">Total Warfare</a>
+                    <a class="nav-link scroll" href="#total-warfare">Total Warfare</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#works-cited">Works Cited</a>
+                    <a class="nav-link scroll" href="#southern-reaction">Southern Reaction</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link scroll" href="#works-cited">Works Cited</a>
+                </li>
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Return to Portfolio</a>
                 </li>
             </ul>
         </nav>
@@ -64,7 +72,7 @@
             <span class="carousel-control-next-icon"></span>
         </a>      
         </div>
-        <div id="total-warfare" style="padding-top: 25px;" class="container">
+        <div id="total-warfare" style="padding-top: 75px; padding-left: 20px;" class="container">
             <h1 class="display-4 text-center">Total Warfare</h1>
             <p class="text-center">
                 Sherman's march was based around <b>Total Warfare</b> to bring fear to the people in Georgia. Sherman
@@ -73,8 +81,42 @@
                 the raid as a sort of payback. Total warfare also had Sherman's troops burn down and destroy anything
                 of value to the confederates. This included factories, railroads, weapon storages, etc.
             </p>
+            <a href="javascript:void(0)" onClick="openColumbiaGallery()"><img class="rounded mx-auto d-block clickable-image" style="width: 30%;" src="https://upload.wikimedia.org/wikipedia/commons/2/2a/The_burning_of_Columbia%2C_South_Carolina%2C_February_17%2C_1865.jpg"></a>
+            <div id="columbiaGallery" class="overlay" onClick="closeColumbiaGallery()">
+                <a href="javascript:void(0)" class="closebtn" onclick="closeColumbiaGallery()">&times;</a>
+                <div class="burningColumbiaImage">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2a/The_burning_of_Columbia%2C_South_Carolina%2C_February_17%2C_1865.jpg">
+                    <h3 class="text-center" style="color: white; padding-top: 20px;">The burning of Columbia, South Carolina, Feburary 17, 1865</h3>
+                    <small style="color: white;">Source: William Waud</small>
+                </div>
+            </div>
+            <p class="text-center">The burning of Columbia, South Carolina<br>Source: William Waud</p>
         </div>
-        <div id="works-cited" style="padding-top: 25px; " class="container">
+        <div id="southern-reaction" style="padding-top: 75px;" class="container container-fluid">
+            <h1 class="display-4 text-center">Southern Reaction</h1>
+            <p class="text-center">
+                This section will be split into two. One for the southern generals and one for the southern civilian reactions.
+            </p>
+            <div class="row">
+                <div class="col-6">
+                    <h3 class="text-center">Southern Generals</h3>
+                    <p class="text-center">
+                        During the march General John Bell of the Confederate army was planning a raid to take back
+                        Chattanooga, Tennessee. John Bell hope that him doing this would force Sherman to turn around
+                        and come fight him, however Sherman was anticipating the raid and sent General George H. Thomas
+                        to deal with John Bell in Chattanooga. One the attack was over Georgia was cleared of Confederate
+                        troops and Sherman was free to continue to the ocean.
+                    </p>
+                </div>
+                <div class="col-6">
+                    <h3 class="text-center">Southern Civilians</h3>
+                    <p class="text-center">
+
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div id="works-cited" style="padding-top: 75px; " class="container">
             <h1 class="display-2" style="text-align: center;">Works Cited</h1>
             <div class="container-fluid">
                 <div class="row">
@@ -84,6 +126,7 @@
                             <li>Alexander Hay Ritchie [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Sherman_sea_1868.jpg">via Wikimedia Commons</a></li>
                             <li>Map by Hal Jespersen, www.cwmaps.com [<a href="https://creativecommons.org/licenses/by/3.0">CC BY 3.0</a>], <a href="https://commons.wikimedia.org/wiki/File:Savannah_Campaign.png">via Wikimedia Commons</a></li>
                             <li>Geroge N. Bernard [Public domain], <a href="https://commons.wikimedia.org/wiki/File:Sherman_railroad_destroy_noborder.jpg">via Wikimedia Commons</a></li>
+                            <li>William Waud (d. 1878) for Harper&#039;s Weekly. [Public domain], <a href="https://commons.wikimedia.org/wiki/File:The_burning_of_Columbia,_South_Carolina,_February_17,_1865.jpg">via Wikimedia Commons</a></li>
                         </ul>
                     </div>
                     <div class="col-6">
@@ -93,12 +136,79 @@
             </div>
         </div>
         <footer class="page-footer font-small pt-4">
-            <div class="footer-copyright text-center text-light bg-primary py-3">
-                © Copyright 2019 Hayden Stith. All Rights Reserved. All Information and Media Used Have Rights and Those Rights are Held By Their Respective Owners and are <a href="#works-cited" style="color: white; text-decoration: underline;">Cited Here</a>
+            <div class="footer-copyright text-center text-light bg-dark py-3">
+                © Copyright 2019 Hayden Stith. All Rights Reserved. All Information and Media's Rights are Held By Their Respective Owners and are <a href="#works-cited" style="color: white; text-decoration: underline;">Cited Here</a>
             </div>
         </footer>
+        <style type="text/css">
+            .clickable-image {
+                transition: .5s ease;
+                opacity: 1;
+            }
+
+            .clickable-image:hover {
+                transition: .5s ease;
+                opacity: 0.3;
+                transform: scale(1.05);
+            }
+
+            .overlay {
+                height: 100%;
+                width: 100%;
+                position: fixed;
+                z-index: 10000;
+                top: 0;
+                left: 0;
+                background-color: rgb(0,0,0);
+                background-color: rgba(0,0,0, 0.9);
+                overflow-x: hidden;
+                visibility: hidden;
+            }
+
+            .overlay .closebtn {
+                position: absolute;
+                top: 20px;
+                right: 45px;
+                font-size: 60px;
+                color: white;
+            }
+
+            .closebtn:hover {
+                text-decoration: none;
+                color: rgba(255, 255, 255, 0.7);
+            }
+
+            .burningColumbiaImage {
+                text-align: center;
+                align-content: center;
+                padding-top: 50px;
+            }
+
+            .burningColumbiaImage img {
+                width: 55%;
+            }
+        </style>
         <script>
-            
+            $(document).ready(function() {
+
+                var scrollLink = $('.scroll');
+                var burningColumbiaImage = $('.burningColumbia');
+
+                scrollLink.click(function(e) {
+                    e.preventDefault;
+                    $('body, html').animate({
+                        scrollTop: $(this.hash).offset().top
+                    }, 750)
+                })
+            })
+
+            function openColumbiaGallery() {
+                document.getElementById("columbiaGallery").style.visibility = "visible";
+            }
+
+            function closeColumbiaGallery() {
+                document.getElementById("columbiaGallery").style.visibility = "hidden";
+            }
         </script>
     </body>
 </html>
