Added new section and finished previous ones

--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -21,6 +21,9 @@
                     <a class="nav-link scroll" href="#southern-reaction">Southern Reaction</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link scroll" href="#modern-connections">Modern Connections</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link scroll" href="#works-cited">Works Cited</a>
                 </li>
             </ul>
@@ -111,10 +114,27 @@
                 <div class="col-6">
                     <h3 class="text-center">Southern Civilians</h3>
                     <p class="text-center">
-
-                    </p>
+                        When the march reached Atlanta, Sherman's troops put it under siege. Many citizens fled south to
+                        avoid Sherman and his troops. One account from a citizen of Atlanta said, "Since Atlanta, I have 
+                        felt as if ... we are going to be wiped off of the Earth." <a class="scroll" href="#citation-1"><sup>[1]</sup></a>
+                         Many of the people who fled south went to refugee camps, one of which was in Nashville and held thousands
+                        homeless refugees. Many anonymous civilians, such as Jennie Wade, were found dead later. This was
+                        preventable as when Sherman entered Atlanta he warned the mayor to evacutate the city, he did not
+                        do this as he claimed that the city did nothing wrong. Sherman continued with the raid as he saw
+                        war as cruety enough to justify the burning.  
+                    </p> 
                 </div>
             </div>
+        </div>
+        <div id="modern-connections" style="padding-top: 75px;" class="container">
+            <h1 class="display-4 text-center">Modern Connections</h1>
+            <p class="text-center">
+                One connection can be seen in both world wars. In both of the world wars there was submarie
+                warfare. In submarine warfare they would bomb civilian trade ships to strike fear into 
+                the countires populas. The German's also bombed London so much as a show of force that they 
+                started to ship children off to the country side. Also during the post World War II era during
+                the Vietnam War a sort of total warfare was shown by North Vietnam.
+            </p>
         </div>
         <div id="works-cited" style="padding-top: 75px; " class="container">
             <h1 class="display-2" style="text-align: center;">Works Cited</h1>
@@ -131,6 +151,9 @@
                     </div>
                     <div class="col-6">
                         <h3 class="display-6 text-center">Information</h3>
+                        <ul>
+                            <li id="citation-1"><sup>[1]</sup> History.com Editors. "Sherman’s March to the Sea." HISTORY. 22 Feb. 2010. Web. 8 May 2019. <a href="https://www.history.com/topics/american-civil-war/shermans-march">https://www.history.com/topics/american-civil-war/shermans-march</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
