--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -136,6 +136,11 @@
                 the Vietnam War a sort of total warfare was shown by North Vietnam.
             </p>
         </div>
+        <div id="song" style="padding-top: 75px; padding-bottom: 25px; background-color: black; color: white;" class="container-fluid">
+            <div class="container">
+                <h1 class="display-4 text-center">Listen: Sherman's March to the Sea Song</h1>
+            </div>
+        </div>
         <div id="works-cited" style="padding-top: 75px; " class="container">
             <h1 class="display-2" style="text-align: center;">Works Cited</h1>
             <div class="container-fluid">
