Added Audio Player

--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -7,9 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
-    <body data-spy="scroll" data-target=".navbar" data-offset="50">
+    <body data-spy="scroll" data-target=".navbar" data-offset="75">
         <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
-            <a class="navbar-brand" href="#civilWarPics">Sherman's March to the Sea</a>
+            <a class="navbar-brand scroll" href="#civilWarPics">Sherman's March to the Sea</a>
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link scroll" href="#civilWarPics">Photos</a>
@@ -22,6 +22,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link scroll" href="#modern-connections">Modern Connections</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link scroll" href="#song">Parody Song</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link scroll" href="#works-cited">Works Cited</a>
@@ -139,6 +142,12 @@
         <div id="song" style="padding-top: 75px; padding-bottom: 25px; background-color: black; color: white;" class="container-fluid">
             <div class="container">
                 <h1 class="display-4 text-center">Listen: Sherman's March to the Sea Song</h1>
+                <p class="text-center">Liseten to <b>Sherman's March PARODY of Old Town Road by Lil Nas X (feat. Raodog) by MishMash</b></p>
+                <center>
+                    <audio controls>
+                        Your Browser Does Not Support The Audio.
+                    </audio>
+                </center>
             </div>
         </div>
         <div id="works-cited" style="padding-top: 75px; " class="container">
