--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -142,7 +142,7 @@
         <div id="song" style="padding-top: 75px; padding-bottom: 25px; background-color: black; color: white;" class="container-fluid">
             <div class="container">
                 <h1 class="display-4 text-center">Listen: Sherman's March to the Sea Song</h1>
-                <p class="text-center">Liseten to <b>Sherman's March PARODY of Old Town Road by Lil Nas X (feat. Raodog) by MishMash</b></p>
+                <p class="text-center">Liseten to <b>Sherman's March PARODY of Old Town Road by Lil Nas X (feat. DJ Raodog) by MishMash</b></p>
                 <center>
                     <audio controls>
                         Your Browser Does Not Support The Audio.
