--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -129,12 +129,13 @@
                 </div>
             </div>
         </div>
-        <div id="modern-connections" style="padding-top: 75px;" class="container">
+        <div id="modern-connections" style="padding-top: 75px; padding-bottom: 75px;" class="container">
             <h1 class="display-4 text-center">Modern Connections</h1>
             <p class="text-center">
                 One connection can be seen in both world wars. In both of the world wars there was submarie
                 warfare. In submarine warfare they would bomb civilian trade ships to strike fear into 
-                the countires populas. The German's also bombed London so much as a show of force that they 
+                the countires populas just as Sherman's troops would burn down cities to strike fear into
+                the south's populace. The German's also bombed London so much as a show of force that they 
                 started to ship children off to the country side. Also during the post World War II era during
                 the Vietnam War a sort of total warfare was shown by North Vietnam.
             </p>
