Adding Album Cover to Website

--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -145,6 +145,8 @@
                 <h1 class="display-4 text-center">Listen: Sherman's March to the Sea Song</h1>
                 <p class="text-center">Liseten to <b>Sherman's March PARODY of Old Town Road by Lil Nas X (feat. DJ Raodog) by MishMash</b></p>
                 <center>
+                    <img style="width: 25%; padding-bottom: 25px;" src="./images/MishMashAsItIs.png">
+                    <br>
                     <h4>This Text Will Disapear When The Song Is Added</h4>
                     <audio controls>
                         Your Browser Does Not Support The Audio.
