Added song to civil war site.

--- a/civil-war/index.html
+++ b/civil-war/index.html
@@ -147,10 +147,11 @@
                 <center>
                     <img style="width: 25%; padding-bottom: 25px;" src="./images/MishMashAsItIs.png">
                     <br>
-                    <h4>This Text Will Disapear When The Song Is Added</h4>
                     <audio controls>
+                        <source src="./audio/song.mp3" type="audio/mpeg">
                         Your Browser Does Not Support The Audio.
                     </audio>
+                    <p>Alternatively you can download it <a href="./audio/song.mp3">here</a>.</p>
                 </center>
             </div>
         </div>
